<resources>
    <string name="app_name">GoEat</string>
    <string name="version">Version 1.0</string>
    <string name="loading">Loading...</string>
    <string name="slogan">Discovery . Delivery . Reservation</string>
    <string name="team">Cong_Hoang</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="app_id">992366210899636</string>
    <string name="facebook_login">Đăng nhập bằng Facebook</string>
    <string name="google_login">Đăng nhập bằng Google</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="enter_password">Enter password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="dangky">Đăng ký</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu ở trên </string>
    <string name="thongbaodangkythanhcong">Tạo tài khoản thành công </string>
    <string name="dangxuly">Đang xử lý </string>
    <string name="invalid_acc">Invalid Account !</string>
    <string name="password_recover">Password Recover</string>
    <string name="msg_recover_enter_email">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để khôi phục mật khẩu !</string>
    <string name="send_email">Send Email</string>
    <string name="are_member">Are you have a account ? </string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="sent_email">Sent Email !</string>
    <string name="odau">Ở đâu</string>
    <string name="angi">Ăn gì ?</string>
    <string name="newest">Newest</string>
    <string name="items">Danh mục</string>
    <string name="area">HCM</string>
    <string name="nearby">Nearby</string>
    <string name="delivery">Delivery </string>
    <string name="gameandfun">Game and fun</string>
    <string name="Rate">Rate</string>
    <string name="blogs">Blogs </string>
    <string name="top_member">Top Member</string>
    <string name="order">Order </string>
    <string name="upload">Upload</string>
    <string name="save">Save</string>
    <string name="review">Review</string>
    <string name="check_in">Check-in</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="add_wifi">Add Wifi</string>
    <string name="wifi_name">Enter Wifi Name</string>
    <string name="wifi_password">Enter Wifi Password</string>
    <string name="agree">Agree</string>
    <string name="missing_infor">Please Fill All The Information</string>
    <string name="successfull">Successfull ! </string>
    <string name="post">Post</string>
    <string name="menu">Menu</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="open_time">Giờ mở cửa</string>
    <string name="closed_time">Giờ đóng cửa</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="dish">Dish</string>
    <string name="price">Price</string>

    <string name="newmenu">Add New Menu</string>
</resources>
